--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@ __recovery/
 
 # Boss dependency manager vendor folder https://github.com/HashLoad/boss
 modules/
+source/Android/
+source/Android64/
